# ubiquitous-ai

./: .env.example  .gitignore  BACKEND-STRUCTURE-FIX.md  DOCKER-BUILD.md  PHASE1-COMPLETE.md  PHASE2-STATUS.md  PLAN.md  QUICKSTART.md  README.md  REMAINING-WORK.md  SETUP.md  dev-local.sh  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.copilot/: CONTEXT.md  README.md  changelog.md
.copilot/architecture/: overview.md
.copilot/conventions/: coding-standards.md
.copilot/discovery/output/: api-routes.md  components.md  database-schema.md  dependencies.md  environment-variables.md  project-structure.md
.copilot/scripts/: full-discovery.sh  quick-update.sh
.github/: copilot-instructions.md
apps/ai-service/: .gitignore  Dockerfile  package.json  pyproject.toml
apps/ai-service/src/: main.py
apps/ai-service/src/config/: settings.py
apps/ai-service/src/logger/: setup.py
apps/ai-service/src/middleware/: logging.py
apps/ai-service/src/routes/: health.py
apps/api/: Dockerfile  package.json
apps/api/src/: server.ts
apps/api/src/controllers/: agency.controller.ts  campaign-plan.controller.ts  client.controller.ts  invitation.controller.ts  organization-profile.controller.ts  project.controller.ts
apps/api/src/middleware/: auth.ts  error.ts  tenant.ts
apps/api/src/models/: campaign-plan.model.ts  client.model.ts  organization-profile.model.ts  project.model.ts
apps/api/src/repositories/: agency.repository.ts  client.repository.ts  (+4 more)
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/src/: proxy.ts
(+26 files in other folders)
